[package]
authors = ["Zeyla Hellyer <zey@zey.moe>"]
name = "simple-struct"
version = "0.1.0"
edition = "2018"

[dependencies]
postgres = "0.16.0-rc.2"
tokio-postgres = "0.4.0-rc.3"

[dependencies.postgres-mapper]
features = ["postgres-support"]
path = "../../"

[dependencies.postgres-mapper-derive]
default-features = false
features = ["postgres-mapper", "postgres-support"]
path = "../../postgres_mapper_derive"
